abstract insurace_macro_test documentaitn to own docs blocks

--- a/models/learning/macros/insurance_macro_test.yml
+++ b/models/learning/macros/insurance_macro_test.yml
@@ -2,4 +2,4 @@ version: 2
 
 models:
   - name: insurance_macro_test
-    description: 'Testing out age recoding with a custom macro on dummy insurance information.'
+    description: '{{ doc("insurance_macro_test_desc") }}'
