generalized limit_data_in_dev() macro to include `x` argument for number of rows to sample

--- a/macros/learning/limit_data_in_dev.yml
+++ b/macros/learning/limit_data_in_dev.yml
@@ -2,8 +2,8 @@ version: 2
 
 macros:
   - name: limit_data_in_dev
-    description: A macro to sample 5 rows from table when in dev
+    description: A macro to randomly sample the specified number of rows from table when in dev
     arguments:
-      - name: col_name
+      - name: x
         type: int
-        description: The column name of the cents field.
+        description: The number of rows to subset. The default value is 5.
