--- a/models/sources/jaffle_shop/src_customers.yml
+++ b/models/sources/jaffle_shop/src_customers.yml
@@ -1,9 +1,9 @@
 version: 2
 
 sources:
-  - name: external_csv
+  - name: jaffle_shop
     meta:
       external_location: "D:\\git\\dbt-duckdb-demo\\external\\in\\{name}.csv"
     tables:
-      - name: raw_payments
-        description: raw_payments from jaffle shop demo
+      - name: raw_customers
+        description: raw_customers from jaffle shop demo
