abstract mtcars details to own md file

--- a/models/sources/mtcars/src_mtcars.yml
+++ b/models/sources/mtcars/src_mtcars.yml
@@ -10,28 +10,28 @@ sources:
         columns:
           - name: mpg
             type: numeric
-            description: 'miles per gallon'
+            description: '{{ doc("mtcars_details_mpg") }}'
           - name: cyl
             type: numeric
-            description: 'number of cylinders in engine'
+            description: '{{ doc("mtcars_details_cyl") }}'
           - name: wt
             type: numeric
-            description: 'weight of car in tons'
+            description: '{{ doc("mtcars_details_wt") }}'
           - name: gears
             type: numeric
-            description: 'number of gears in drive'
+            description: '{{ doc("mtcars_details_gears") }}'
       - name: mtcars.parquet
         description: mtcars datasets from R as parquet
         columns:
           - name: mpg
             type: numeric
-            description: 'miles per gallon'
+            description: '{{ doc("mtcars_details_mpg") }}'
           - name: cyl
             type: numeric
-            description: 'number of cylinders in engine'
+            description: '{{ doc("mtcars_details_cyl") }}'
           - name: wt
             type: numeric
-            description: 'weight of car in tons'
+            description: '{{ doc("mtcars_details_wt") }}'
           - name: gears
             type: numeric
-            description: 'number of gears in drive'
+            description: '{{ doc("mtcars_details_gears") }}'
