--- a/models/docs/sources/jaffle_shop/src_customers.yml
+++ b/models/docs/sources/jaffle_shop/src_customers.yml
@@ -11,6 +11,9 @@ sources:
           - name: id
             type: numeric
             description: '{{ doc("jaffle_shop_details_id") }}'
+            tests:
+              - unique
+              - not_null
           - name: first_name
             type: numeric
             description: '{{ doc("raw_customers_details_first_name") }}'
