--- a/models/staging/jaffle_shop/stg_orders.yml
+++ b/models/staging/jaffle_shop/stg_orders.yml
@@ -2,8 +2,10 @@ version: 2
 
 models:
   - name: stg_orders
+    description: Information on orders; Order_id is the tested primary key and there is one unique order per row.
     columns:
       - name: order_id
+        description: primary key for stg_orders.
         tests:
           - unique
           - not_null
