added source level description

--- a/models/docs/sources/jaffle_shop/src_customers.yml
+++ b/models/docs/sources/jaffle_shop/src_customers.yml
@@ -1,7 +1,8 @@
 version: 2
 
 sources:
-  - name: jaffle_shop
+  - name: jaffle_shop 
+    description:  '{{ doc("jaffle_shop_desc") }}'
     meta:
       external_location: "D:\\git\\dbt-duckdb-demo\\external\\in\\{name}.csv"
     tables:
