--- a/models/staging/jaffle_shop/stg_orders.yml
+++ b/models/staging/jaffle_shop/stg_orders.yml
@@ -3,6 +3,8 @@ version: 2
 models:
   - name: stg_orders
     description: Information on orders; Order_id is the tested primary key and there is one unique order per row.
+    config:
+      tags: [jaffle_shop]
     columns:
       - name: order_id
         description: primary key for stg_orders.
